<resources>
    <string name="app_name">Salary Converter</string>
    <string name="error_message">Please select all options to proceed.</string>
    <string name="error_same_hc_rc">Your home country and remote country can\'t be the same.</string>

<!--//HOME COUNTRY OPTIONS-->
    <string-array name="home_countries_array">
        <item>Select your home country</item>
        <item>Canada</item>
        <item>United States</item>
        <item>Mexico</item>
        <item>Brazil</item>
        <item>Germany</item>
        <item>Japan</item>
        <item>Nigeria</item>
        <item>Poland</item>
        <item>England</item>
        <item>South Korea</item>
    </string-array>

<!--//JOB OPTIONS-->
    <string-array name="job_array">
        <item>Select your job</item>
        <item>Software engineer</item>
        <item>Software tester</item>
        <item>UI designer</item>
        <item>Web developer</item>
        <item>Digital marketing specialist</item>
        <item>Web designer</item>
        <item>Mobile developer</item>
        <item>Game developer</item>
        <item>UX designer</item>
        <item>Network administrator</item>
    </string-array>

<!--//REMOTE COUNTRY OPTIONS-->
    <string-array name="remote_countries_array">
        <item>Select your remote job location</item>
        <item>Canada</item>
        <item>United States</item>
        <item>Mexico</item>
        <item>Brazil</item>
        <item>Germany</item>
        <item>Japan</item>
        <item>Nigeria</item>
        <item>Poland</item>
        <item>England</item>
        <item>South Korea</item>
    </string-array>

<!--< SalaryInfo Activity Strings >-->
    <string name="percentDifferenceText">JP 30% more than CA</string>
    <string name="job">Web Developer</string>
    <string name="rateLabel">Rate</string>
    <string name="rate">1 JP = 100 CAD</string>
    <string name="averageSalaryLabel">Average Yearly Salary</string>
    <string name="homeCountryAverageSalary">400 JP</string>
    <string name="remoteCountryAverageSalary">120,000 CAD</string>

<!--//CONVERSION RATES-->
    <string-array name="conversion_rates_array">
        <item>1 USD = 1.35 CAD</item>
        <item>1 CAD = 13.85 MXN</item>
        <item>1 CAD = 2.41 BRL</item>
        <item>1 EUR = 1.52 CAD</item>
        <item>1 CAD = 81.98 JPY</item>
        <item>1 CAD = 233.40 NGN</item>
        <item>1 CAD = 2.75 PLN</item>
        <item>1 GBP = 1.74 CAD</item>
        <item>1 CAD = 829.34 KRW</item>
        <item>1 USD = 18.68 MXN</item>
        <item>1 USD = 3.25 BRL</item>
        <item>1 EUR = 1.13 USD</item>
        <item>1 USD = 110.52 JPY</item>
        <item>1 USD = 314.75 NGN</item>
        <item>1 USD = 3.71 PLN</item>
        <item>1 GBP = 1.29 USD</item>
        <item>1 USD = 1118.40 KRW</item>
        <item>1 BRL = 5.75 MXN</item>
        <item>1 EUR = 21.13 MXN</item>
        <item>1 MXN = 5.89 JPY</item>
        <item>1 MXN = 16.80 NGN</item>
        <item>1 PLN = 5.05 MXN</item>
        <item>1 GBP = 24.11 MXN</item>
        <item>1 MXN = 59.67 KRW</item>
        <item>1 EUR = 3.66 BRL</item>
        <item>1 BRL = 34.00 JPY</item>
        <item>1 BRL = 96.96 NGN</item>
        <item>1 BRL = 1.14 PLN</item>
        <item>1 GBP = 4.18 BRL</item>
        <item>1 BRL = 344.29 KRW</item>
        <item>1 EUR = 124.49 JPY</item>
        <item>1 EUR = 354.90 NGN</item>
        <item>1 EUR = 4.18 PLN</item>
        <item>1 GBP = 1.14 EUR</item>
        <item>1 EUR = 1260.39 KRW</item>
        <item>1 JPY = 2.85 NGN</item>
        <item>1 PLN = 29.74 JPY</item>
        <item>1 GBP = 142.12 JPY</item>
        <item>1 JPY = 10.12 KRW</item>
        <item>1 PLN = 84.80 NGN</item>
        <item>1 GBP = 404.99 NGN</item>
        <item>1 NGN = 3.55 KRW</item>
        <item>1 GBP = 4.78 PLN</item>
        <item>1 PLN = 301.16 KRW</item>
        <item>1 GBP = 1438.08 KRW</item>
    </string-array>

<!--//AVERAGE YEARLY SALARY-->
    <string-array name="average_salary_canada">
        <item>70,009 CAD</item>
        <item>52,052 CAD</item>
        <item>54,488 CAD</item>
        <item>49,758 CAD</item>
        <item>49,533 CAD</item>
        <item>48,083 CAD</item>
        <item>57,380 CAD</item>
        <item>51,352 CAD</item>
        <item>58,670 CAD</item>
        <item>56,174 CAD</item>
    </string-array>

    <string-array name="average_salary_unitedStates">
        <item>80,825 USD</item>
        <item>55,678 USD</item>
        <item>64,760 USD</item>
        <item>57,702 USD</item>
        <item>44,663 USD</item>
        <item>48,632 USD</item>
        <item>71,495 USD</item>
        <item>65,244 USD</item>
        <item>73,800 USD</item>
        <item>56,576 USD</item>
    </string-array>
    
    <string-array name="average_salary_mexico">
        <item>255,000 MXN</item>
        <item>276,500 MXN</item>
        <item>287,340 MXN</item>
        <item>354,000 MXN</item>
        <item>480,000 MXN</item>
        <item>150,000 MXN</item>
        <item>300,000 MXN</item>
        <item>180,000 MXN</item>
        <item>365,000 MXN</item>
        <item>360,000 MXN</item>
    </string-array>
    
    <string-array name="average_salary_brazil">
        <item>93,893 BRL</item>
        <item>78,657 BRL</item>
        <item>48,342 BRL</item>
        <item>60,560 BRL</item>
        <item>50,194 BRL</item>
        <item>46,928 BRL</item>
        <item>60,789 BRL</item>
        <item>40,934 BRL</item>
        <item>50,229 BRL</item>
        <item>80,994 BRL</item>
    </string-array>
    
    <string-array name="average_salary_germany">
        <item>54,000 EUR</item>
        <item>49,000 EUR</item>
        <item>40,500 EUR</item>
        <item>50,000 EUR</item>
        <item>53,000 EUR</item>
        <item>44,300 EUR</item>
        <item>48,802 EUR</item>
        <item>38,500 EUR</item>
        <item>51,000 EUR</item>
        <item>55,000 EUR</item>
    </string-array>

    <string-array name="average_salary_japan">
        <item>5,750,000 JPY</item>
        <item>3,700,000 JPY</item>
        <item>3,730,000 JPY</item>
        <item>3,763,765 JPY</item>
        <item>3,400,000 JPY</item>
        <item>3,500,000 JPY</item>
        <item>4,560,000 JPY</item>
        <item>5,180,000 JPY</item>
        <item>5,000,000 JPY</item>
        <item>6,450,000 JPY</item>
    </string-array>

    <string-array name="average_salary_nigeria">
        <item>3,000,000 NGN</item>
        <item>2,000,000 NGN</item>
        <item>4,000,000 NGN</item>
        <item>2,350,000 NGN</item>
        <item>1,500,000 NGN</item>
        <item>1,200,000 NGN</item>
        <item>2,250,000 NGN</item>
        <item>2,500,000 NGN</item>
        <item>2,350,000 NGN</item>
        <item>2,000,000 NGN</item>
    </string-array>

    <string-array name="average_salary_poland">
        <item>90,500 PLN</item>
        <item>50,000 PLN</item>
        <item>55,000 PLN</item>
        <item>57,000 PLN</item>
        <item>52,000 PLN</item>
        <item>57,000 PLN</item>
        <item>59,000 PLN</item>
        <item>48,000 PLN</item>
        <item>49,000 PLN</item>
        <item>60,000 PLN</item>
    </string-array>

    <string-array name="average_salary_england">
        <item>34,142 GBP</item>
        <item>24,950 GBP</item>
        <item>29,117 GBP</item>
        <item>24,833 GBP</item>
        <item>26,450 GBP</item>
        <item>22,860 GBP</item>
        <item>30,200 GBP</item>
        <item>30,671 GBP</item>
        <item>30,758 GBP</item>
        <item>20,338 GBP</item>
    </string-array>

    <string-array name="average_salary_southKorea">
        <item>45,000,000 KRW</item>
        <item>40,000,000 KRW</item>
        <item>43,000,000 KRW</item>
        <item>39,045,640 KRW</item>
        <item>38,000,000 KRW</item>
        <item>41,612,840 KRW</item>
        <item>64,964,060 KRW</item>
        <item>43,500,000 KRW</item>
        <item>44,802,800 KRW</item>
        <item>27,785,576 KRW</item>
    </string-array>

</resources>
