<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.constraint.ConstraintLayout-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.paulo.salaryconverter.SalaryInfoActivity">

    <LinearLayout
        style="@style/ContentContainerStyle01">
        
        <!--job area-->
        <LinearLayout
            style="@style/ContentStyle01">
            <TextView
                android:id="@+id/job"
                android:text="@string/job"
                style="@style/fontMid_Main"
                android:layout_gravity="center"/>
        </LinearLayout>

        <!--First View Img area-->
        <LinearLayout
            style="@style/HightRapWidthParentHorizon"
            android:gravity="center"
            android:padding="10dp">
            <ImageView
                style="@style/WidthHightwRapContent"
                android:src="@mipmap/country1"/>

            <ImageView
                style="@style/WidthHightwRapContent"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:src="@mipmap/scalexxxhdpi"/>

            <ImageView
                style="@style/WidthHightwRapContent"
                android:src="@mipmap/country2"/>
        </LinearLayout>
        
        <!--PercentDifference area-->
        <LinearLayout
            style="@style/HightRapWidthParentVertical">
            <TextView
                android:id="@+id/percentDifferenceTex"
                android:text="@string/percentDifferenceText"
                style="@style/fontBig"
                android:layout_gravity="center"/>
        </LinearLayout>
        
    </LinearLayout>
    
    
    <LinearLayout
        style="@style/ContentContainerStyle02"
        android:background="@color/colorBackGround">
        
        <!--Rate area-->
        <LinearLayout
            style="@style/HightRapWidthParent">
            <TextView
                android:text="@string/rateLabel"
                style="@style/fontSmall_Sub2"/>
        </LinearLayout>

        <LinearLayout
            style="@style/HightRapWidthParent"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/rate"
                android:text="@string/rate"
                android:layout_gravity="center"
                style="@style/fontMid_Sub2"/>
        </LinearLayout>

    </LinearLayout>
    

    
    <LinearLayout
        style="@style/ContentContainerStyle01">
        
        <!--Average salary area-->
        <LinearLayout
            style="@style/HightRapWidthParent">

            <TextView
                android:text="@string/averageSalaryLabel"
                style="@style/fontSmall_Sub1"/>
        </LinearLayout>

        <LinearLayout
            style="@style/HightRapWidthParentHorizon"
            android:paddingTop="10dp">

            <ImageView
                style="@style/WidthHightwRapContent"
                android:src="@mipmap/country1"/>

            <TextView
                android:id="@+id/homeCountryAverageSalary"
                android:text="@string/homeCountryAverageSalary"
                android:layout_gravity="center_vertical"
                style="@style/fontMid_Main"/>
        </LinearLayout>

        <LinearLayout
            style="@style/HightRapWidthParentHorizon"
            android:paddingTop="10dp">

            <ImageView
                style="@style/WidthHightwRapContent"
                android:src="@mipmap/country2"/>

            <TextView
                android:id="@+id/emotCountryAverageSalary"
                android:layout_gravity="center_vertical"
                style="@style/fontMid_Main"
                android:text="@string/remoteCountryAverageSalary"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>

    <!--</android.support.constraint.ConstraintLayout>-->
